force-app/main/default/objects/TLO_Officer__c/TLO_Officer__c.object-meta.xml
<CustomObject>
    <label>TLO Officer</label>
    <nameField>
        <label>TLO Officer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TLO Officers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>