force-app/main/default/objects/TLO_Officer__c/fields/Forrester_OfficerId__c.field-meta.xml
<CustomField>
    <fullName>Forrester_OfficerId__c</fullName>
    <externalId>true</externalId>
    <label>Forrester Officer ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>