force-app/main/default/objects/TLO_Officer__c/fields/MitId__c.field-meta.xml
<CustomField>
    <fullName>MitId__c</fullName>
    <externalId>true</externalId>
    <label>MIT ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>